--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
-        <title>POSITIVITY BOX</title>
+        <title>💌 THE POSITIVITY BOX</title>
         <link rel="stylesheet" href="style.css" />
     </head>
 
